docs: refresh Codex handoff after task 3.8